Fix for header on mobile(test) remove tablet's include

--- a/src/themes/ibaser/sass/ibaser/_header.scss
+++ b/src/themes/ibaser/sass/ibaser/_header.scss
@@ -382,11 +382,11 @@ main,
   display: none;
 }
 
-.main-navigation .main-menu .menu-item-has-children > .sub-menu.hidden-links {
-  @media only screen and (max-width: $media-lg) {
-    position: fixed;
-  }
-}
+// .main-navigation .main-menu .menu-item-has-children:not(.off-canvas):hover > .sub-menu.hidden-links {
+//   @media only screen and (max-width: $media-lg) {
+//     position: fixed;
+//   }
+// }
 
 .main-navigation .main-menu .menu-item-has-children>.sub-menu {
   @media only screen and (min-width: 768px) {
